example/lib/src/l10n/errors/app_zh_CN.arb
{
  "@@locale": "zh_CN",
  "error": "发生错误",
  "@error": {
    "description": "Ошибка"
  },
  "unexpectedError": "发生了意外错误",
  "@unexpectedError": {
    "description": "Произошла какая то ошибка"
  },
  "bugReportSentText": "错误报告已成功发送。",
  "@bugReportSentText": {
    "description": "Сообщение об успешной отправке баг репорта"
  }
}